--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
          </section>
 
-         <section class="offer">
+         <section class="offer ">
             <div class="offer-content-1">
               <h1 class="offer-title">
                 65% OFF
@@ -51,7 +51,7 @@
             </div>
          </section>
 
-         <section class="address-section">
+         <section class="address-section  ">
             <div class="address-content">
                 <p><span>Place:</span> New Park Hotel</p>
                 <p> <span>Date:</span> 31 December Night 2023</p>
@@ -61,7 +61,7 @@
          
          </section>
 
-         <section class="new-year-best-offer">
+         <section class="new-year-best-offer  ">
 
           <div class="best-offer-container">
             <div class="best-offer-content-1">
@@ -82,7 +82,7 @@
 
          </section>
 
-         <section class="holiday-section">
+         <section class="holiday-section  ">
            <h3>WHAT IS FUNCTIONAL</h3>
            <h1> <span>Holidays</span> Sale 50%</h1>
            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
@@ -91,7 +91,7 @@
     </header>
 
     <main>
-    <section class="discount-section">
+    <section class="discount-section ">
       <div class="coupon-container">
         
       </div>
@@ -101,7 +101,7 @@
       </div>
     </section>
 
-    <section class="product-showing">
+    <section class="product-showing ">
       <div class="product-text">
        <h4 style="color: red;">THE BEST GIFTS</h4>
 
@@ -109,8 +109,18 @@
 
        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
       </div>
-      <div class="product-images">
 
+      <div class="product-images">
+       <div class="div-1">
+        <img src="./images/Rectangle 3.png" alt="">
+        <img src="./images/Rectangle 4.png" alt="">
+        <img src="./images/Rectangle 5.png" alt="">
+       </div>
+       <div class="div-2">
+        <img src="./images/Rectangle 6.png" alt="">
+        <img src="./images/Rectangle 7.png" alt="">
+        <img src="./images/Rectangle 8.png" alt="">
+       </div>
       </div>
     </section>
     </main>
